--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -60,7 +60,7 @@
         <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
     </head>
     <body class="is-boxed has-animations">
-           <a href="https://chatspheres.com/views/joinurspheres.html">Join Rooms</a>
+       
         <div class="body-wrap landing main">
             <main>
                 <section class="hero-logo">
@@ -76,7 +76,7 @@
                                 click without registration.
                             </h1>
                             <button id="joinRoomButton" class="button-make-feat" onclick="joinRoom()">Make Feat</button>
-                         
+                         <a class = "button-make-feat" href="https://chatspheres.com/views/joinurspheres.html">Join Rooms</a>
 
                           
 
