--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -72,8 +72,7 @@
                     <div class="hero-inner">
                         <div class="hero-copy">
                             <h1 class="hero-title mt-0">
-                                Featly - solution for remote music lessons, where you start conversation in just one
-                                click without registration.
+                                Chatspheres - Explore Topics, Engage Minds: Your Journey Begins at Chatspheres
                             </h1>
                             <button id="joinRoomButton" class="button-make-feat" onclick="joinRoom()">Make Feat</button>
                          <a class = "button-make-feat" href="https://chatspheres.com/views/joinurspheres.html">Join Rooms</a>
