--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1068,15 +1068,22 @@ label {
     padding: 8px 24px;
     height: 32px;
 }
-.button-primary {
-    background: #097dea;
-    background: linear-gradient(65deg, #0270d7 0, #0f8afd 100%);
-    border-radius: 6px;
+:root {
+  --primary-color: #00BFFF;
+  --secondary-color: #FF6F61; 
+  --accent-color: #8A9597;
 }
+
+.button-primary {
+  background: var(--primary-color); 
+  background: linear-gradient(65deg, var(--primary-color) 0, var(--secondary-color) 100%);
+  border-radius: 6px; 
+}
+
 .button-primary:hover {
-    background: #0982f4;
-    background: linear-gradient(65deg, #0275e1 0, #198ffd 100%);
-    border-radius: 6px;
+  background: var(--secondary-color);
+  background: linear-gradient(65deg, var(--secondary-color) 0, var(--primary-color) 100%);
+  border-radius: 6px;
 }
 .button-block {
     display: flex;
