--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -96,11 +96,13 @@
                             </script>
                         </div>
                         <div class="hero-main-image">
-                            <img
-                                class="landing-main-image"
-                                src="../images/landing/image-3.png"
-                                alt="featlytalk-webrtc-main-image"
-                            />
+
+<!-- Write your comments here --> new images go here
+
+                            
+
+
+                            
                         </div>
                     </div>
                 </section>
