--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -97,7 +97,7 @@
                         </div>
                         <div class="hero-main-image">
 
-<!-- Write your comments here --> new images go here
+<!-- New images go here -->
 
                             
 
