--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -15,7 +15,7 @@ body {
 
 /* Secondary Color - Coral */
 a:hover {
-    color: #00BFFF; /* Coral for the hover color on links */
+    color: white; /* Coral for the hover color on links */
 }
 
 /* Hero Logo Section */
