--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -99,9 +99,12 @@
 
 <!-- New images go here -->
 
-                            
+                      <section class = "description">
+                          <p>
+                            Welcome to Chatspheres, the video chat community that brings people together around shared interests and passions. Imagine a world where Reddit meets live video communication; that's Chatspheres! Users can create or join rooms dedicated to topics they love, engaging in real-time conversations and debates. Whether you're a gaming enthusiast, a film buff, a cooking expert, or just someone looking to connect, there's a room for you. Dive into the vibrant spheres of dialogue and start exploring a whole new dimension of social interaction today!   
+                          </p>
 
-
+                      </section>
                             
                         </div>
                     </div>
