--- a/public/css/Room.css
+++ b/public/css/Room.css
@@ -36,7 +36,7 @@ html[data-theme='dark'] {
 }
 
 :root {
-    --body-bg: #151519;
+    --body-bg: #8A9597;
     --control-bg: #0d0e10;
     --main-color: #8c6be6;
     --error-color: #e63b2a;
