--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -18,7 +18,7 @@
 
         <!-- Title and Icon -->
 
-        <title>FeatlyTalk SFU - Room Video Calls, Messaging and Screen Sharing.</title>
+        <title>ChatsSpheres - Room Video Calls, Join Your Sphere.</title>
         <link rel="shortcut icon" href="../images/logo.jpg" />
         <link rel="apple-touch-icon" href="../images/logo.jpg" />
 
@@ -137,6 +137,11 @@
         <input id="initInputDescription" required type="text" name="description" class="init-common" />
         <label>Description of the meeting</label>
     </div>
+                <div class="input-box">
+    <input id="initInputRoomLimit" required type="number" name="room_limit" class="init-common" min="1" />
+    <label>Room Limit</label>
+</div>
+
                 
 
                 <button id="initSubmitButton" type="submit" class="init-common">Create Feat</button>
