--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -130,6 +130,7 @@
 
           <form class="init-input-error-box">
     <div class="input-box">
+        
         <input id="initInputDescription" required type="text" name="description" class="init-common" onkeyup="checkFields()" />
         <label>Description of the meeting</label>
     </div>
@@ -138,8 +139,24 @@
         <label>Room Limit</label>
     </div>
 
+///////////
+
+ <div class="input-box">
+        
+        <input id="initInputName" required type="text" name="name" class="init-common" onkeyup="checkFields()" data-gtm-form-interact-field-id="0" >
+        <label>Your Name </label>
+    </div>
+
+
+///////////////////
+
+
+              
+
     <button id="initSubmitButton" type="submit" class="init-common" disabled>Create Feat</button>
 </form>
+
+            
 
 
             <span class="init-limit-text">Up to 10 members. No time limit</span>
