--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -116,6 +116,7 @@
                             id="initAudioButton"
                             class="fas fa-microphone-slash"
                             onclick="handleAudio(event)"
+                            
                         ></button>
                         <p>Switch <span>on</span> microphone</p>
                     </div>
@@ -128,9 +129,23 @@
                 <button id="initSettingButton" class="fa-solid fa-gear circle-button"></button>
             </div>
 
-          <form class="init-input-error-box">
+          <form class="init-input-error-box" data-gtm-form-interact-id="0">
+
+
+              
     <div class="input-box">
         
+        <input id="initInputName" required type="text" name="name" class="init-common"  data-gtm-form-interact-field-id="0">
+        <label>Your name</label>
+    </div>
+
+
+
+
+
+
+
+        <div class="input-box">
         <input id="initInputDescription" required type="text" name="description" class="init-common" onkeyup="checkFields()" />
         <label>Description of the meeting</label>
     </div>
@@ -139,16 +154,10 @@
         <label>Room Limit</label>
     </div>
 
-///////////
-
- <div class="input-box">
-        
-        <input id="initInputName" required type="text" name="name" class="init-common" onkeyup="checkFields()" data-gtm-form-interact-field-id="0" >
-        <label>Your Name </label>
-    </div>
 
 
-///////////////////
+
+
 
 
               
