Revert Room.html to the state at commit 9c048005f41b975180c009ccb1d682da9baab6a4

--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -18,7 +18,7 @@
 
         <!-- Title and Icon -->
 
-        <title>ChatsSpheres - Room Video Calls, Join Your Sphere.</title>
+        <title>FeatlyTalk SFU - Room Video Calls, Messaging and Screen Sharing.</title>
         <link rel="shortcut icon" href="../images/logo.jpg" />
         <link rel="apple-touch-icon" href="../images/logo.jpg" />
 
@@ -138,13 +138,9 @@
         <label>Description of the meeting</label>
     </div>
                 
-                
 
                 <button id="initSubmitButton" type="submit" class="init-common">Create Feat</button>
             </form>
-
-            
-
 
             <span class="init-limit-text">Up to 10 members. No time limit</span>
             <span class="init-terms-text"
@@ -992,20 +988,6 @@
                 </div>
             </main>
         </section>
-
-        <script> 
-            
-            function checkFields() {
-    const description = document.getElementById("initInputDescription").value;
-    const roomLimit = document.getElementById("initInputRoomLimit").value;
-    
-    if (description && roomLimit) {
-        document.getElementById("initSubmitButton").disabled = false;
-    } else {
-        document.getElementById("initSubmitButton").disabled = true;
-    }
-}
- </script>
 
         <!--
     Start Google Translate
