--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -162,6 +162,38 @@
    
                 </script> 
 
+<script>
+document.querySelector('form').addEventListener('submit', (event) => {
+      event.preventDefault();
+
+      const name = document.getElementById("initInputName").value;
+      const description = document.getElementById("initInputDescription").value;
+      const roomLimit = document.getElementById("initInputRoomLimit").value;
+
+      fetch('/api/rooms', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+        },
+        body: JSON.stringify({ name, description, room_limit: roomLimit }) // Pay attention to the room_limit key
+      })
+      .then((response) => response.json())
+      .then((data) => {
+        if (data.success) {
+          // Handle success - e.g., navigate to a new page, show a success message, etc.
+        } else {
+          // Handle error - e.g., show an error message
+        }
+      })
+      .catch((error) => {
+        console.error('Error:', error);
+      });
+    }); </script>
+
+
+
+                
+
                 <button id="initSubmitButton" type="submit" class="init-common">Create Feat</button>
             </form>
 
@@ -1012,35 +1044,7 @@
             </main>
         </section>
 
-<script>
-document.querySelector('form').addEventListener('submit', (event) => {
-      event.preventDefault();
 
-      const name = document.getElementById("initInputName").value;
-      const description = document.getElementById("initInputDescription").value;
-      const roomLimit = document.getElementById("initInputRoomLimit").value;
-
-      fetch('/api/rooms', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-        },
-        body: JSON.stringify({ name, description, room_limit: roomLimit }) // Pay attention to the room_limit key
-      })
-      .then((response) => response.json())
-      .then((data) => {
-        if (data.success) {
-          // Handle success - e.g., navigate to a new page, show a success message, etc.
-        } else {
-          // Handle error - e.g., show an error message
-        }
-      })
-      .catch((error) => {
-        console.error('Error:', error);
-      });
-    });
-    
-</script>
 
 
         
