--- a/public/views/joinurspheres.html
+++ b/public/views/joinurspheres.html
@@ -34,7 +34,7 @@
   roomDescription.textContent = room.description;
 
   const roomLimit = document.createElement('p'); // Create paragraph element for room limit
-  roomLimit.textContent = `Room Limit: ${room.room_Limit}`; // Set the text to the room's limit
+  roomLimit.textContent = `Room Limit: ${room.room_limit}`; // Set the text to the room's limit
 
   roomElement.appendChild(roomLink);
   roomElement.appendChild(roomDescription);
