--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -20,8 +20,8 @@
         <!-- Title and Icon -->
 
         <title>FeatlyTalk, Free Video Calls, Messaging and Screen Sharing</title>
-        <link rel="shortcut icon" href="../images/logo.jpg" />
-        <link rel="apple-touch-icon" href="../images/logo.jpg" />
+       <link rel="shortcut icon" href="../../../D3.jpeg" />
+<link rel="apple-touch-icon" href="../../../D3.jpeg" />
 
         <!-- Meta Information -->
 
@@ -65,7 +65,8 @@
             <main>
                 <section class="hero-logo">
                     <a class="logo" href="/">
-                        <img class="header-logo-image" src="../images/logo.svg" alt="featlytalk-webrtc-logo" />
+                        <img class="header-logo-image" src="../../../D3.jpeg" alt="featlytalk-webrtc-logo" />
+
                     </a>
                 </section>
                 <section class="hero">
