--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -20,8 +20,8 @@
         <!-- Title and Icon -->
 
         <title>FeatlyTalk, Free Video Calls, Messaging and Screen Sharing</title>
-<link rel="shortcut icon" href="../images/D3-removebg-preview (1).svg" />
-        <link rel="apple-touch-icon" href="../images/D3-removebg-preview (1).svg" />
+<link rel="shortcut icon" href="../images/wildcard-removebg-preview (1) (1).png" />
+        <link rel="apple-touch-icon" href="../images/wildcard-removebg-preview (1) (1).png" />
 
         <!-- Meta Information -->
 
@@ -65,7 +65,7 @@
             <main>
                 <section class="hero-logo">
                     <a class="logo" href="/">
-                        <img class="header-logo-image" src="../images/D3-removebg-preview (1).svg"" alt="featlytalk-webrtc-logo" />
+                        <img class="header-logo-image" src="../images/wildcard-removebg-preview (1) (1).png"" alt="featlytalk-webrtc-logo" />
 
                     </a>
                 </section>
