--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -20,8 +20,8 @@
         <!-- Title and Icon -->
 
         <title>FeatlyTalk, Free Video Calls, Messaging and Screen Sharing</title>
-<link rel="shortcut icon" href="../images/wildcard-removebg-preview (1) (1).png" />
-        <link rel="apple-touch-icon" href="../images/wildcard-removebg-preview (1) (1).png" />
+<link rel="shortcut icon" href="../images/imageedit_6_6038967838.png" />
+        <link rel="apple-touch-icon" href="../images/imageedit_6_6038967838.png" />
 
         <!-- Meta Information -->
 
