--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -20,8 +20,8 @@
         <!-- Title and Icon -->
 
         <title>FeatlyTalk, Free Video Calls, Messaging and Screen Sharing</title>
-<link rel="shortcut icon" href="../images/imageedit_6_6038967838 (1).png" />
-        <link rel="apple-touch-icon" href="../images/imageedit_6_6038967838 (1).png" />
+<link rel="shortcut icon" href="../images/imageedit_1_8423484387.png" />
+        <link rel="apple-touch-icon" href="../images/imageedit_1_8423484387.png" />
 
         <!-- Meta Information -->
 
@@ -65,7 +65,11 @@
             <main>
                 <section class="hero-logo">
                     <a class="logo" href="/">
-                        <img class="header-logo-image" src="../images/wildcard-removebg-preview (1) (1).png"" alt="featlytalk-webrtc-logo" />
+                        <img class="header-logo-image" src="../images/imageedit_1_8423484387.png" alt="featlytalk-webrtc-logo" />
+
+                    </a>
+                    <a class="logo" href="/">
+                        <img class="header-logo-image" src="../images/imageedit_5_5148581987.png" alt="featlytalk-webrtc-logo" />
 
                     </a>
                 </section>
