--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -18,9 +18,9 @@
 
         <!-- Title and Icon -->
 
-        <title>FeatlyTalk SFU - Room Video Calls, Messaging and Screen Sharing.</title>
-        <link rel="shortcut icon" href="../images/logo.jpg" />
-        <link rel="apple-touch-icon" href="../images/logo.jpg" />
+        <title>42.</title>
+        <link rel="shortcut icon" href="../images/imageedit_1_8423484387.png" />
+        <link rel="apple-touch-icon" href="../images/imageedit_1_8423484387.png" />
 
         <!-- Meta Information -->
 
@@ -43,7 +43,7 @@
         <meta property="og:title" content="Click the link to make a call." />
         <meta
             property="og:description"
-            content="FeatlyTalk SFU calling provides real-time video calls, messaging and screen sharing."
+            content="chatspheres.com SFU calling provides real-time video calls, messaging and screen sharing."
         />
         <meta property="og:image" content="https://featly.io/images/featlytalksfu.png" />
 
@@ -286,7 +286,7 @@ document.querySelector('form').addEventListener('submit', (event) => {
         </div>
 
         <header class="header">
-            <img class="header-logo" src="../images/featlyLogo.svg" alt="logo" />
+            <img class="header-logo" src="../images/imageedit_1_8423484387.png" alt="logo" />
             <nav id="headerNav" class="header-nav">
                 <a href="/">What is Featly?</a>
             </nav>
@@ -303,7 +303,7 @@ document.querySelector('form').addEventListener('submit', (event) => {
             <button id="closeBurgerMenu" onclick="toggleBurgerMenu()">
                 <img class="close-icon" src="../images/icons/close_icon.svg" alt="close" />
             </button>
-            <a href="/">What is Featly?</a>
+            <a href="/">What is chatspheres.com?</a>
         </div>
 
         <div id="membersScreens" class="members-screens minify hidden">
