--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -287,6 +287,7 @@ document.querySelector('form').addEventListener('submit', (event) => {
 
         <header class="header">
             <img class="header-logo" src="../images/imageedit_1_8423484387.png" alt="logo" />
+            <img class="header-logo" src="../images/imageedit_8_9127789464.png" alt="logo" />
             <nav id="headerNav" class="header-nav">
                 <a href="/">What is Featly?</a>
             </nav>
