--- a/public/css/Room.css
+++ b/public/css/Room.css
@@ -967,6 +967,7 @@ input:checked + .slider:before {
 .header-logo {
     width: 160px;
     height: auto;
+    display: inline-block;
 }
 
 .header-nav {
