--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -286,8 +286,10 @@ document.querySelector('form').addEventListener('submit', (event) => {
         </div>
 
         <header class="header">
+            <div class="header-logos">
             <img class="header-logo" src="../images/imageedit_1_8423484387.png" alt="logo" />
             <img class="header-logo" src="../images/imageedit_8_9127789464.png" alt="logo" />
+            </div>
             <nav id="headerNav" class="header-nav">
                 
             </nav>
