--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -287,8 +287,8 @@ document.querySelector('form').addEventListener('submit', (event) => {
 
         <header class="header">
             <div class="header-logos">
-            <img class="header-logo" src="../images/imageedit_1_8423484387.png" alt="logo" />
-            <img class="header-logo" src="../images/imageedit_8_9127789464.png" alt="logo" />
+            <img class="header-logo" src="../images/imageedit_11_9100596704.png" alt="logo" />
+            <img class="header-logo" src="../images/imageedit_8_9127789464 (1).png" alt="logo" />
             </div>
             <nav id="headerNav" class="header-nav">
                 
