--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -79,7 +79,7 @@
                             <h1 class="hero-title mt-0">
                                 Chatspheres - Explore Topics, Engage Minds: Your Journey Begins at Chatspheres
                             </h1>
-                            <button id="joinRoomButton" class="button-make-feat" onclick="joinRoom()">Make Feat</button>
+                            <button id="joinRoomButton" class="button-make-feat" onclick="joinRoom()">Make sphere</button>
                          <a class = "button-make-feat" href="https://chatspheres.com/views/joinurspheres.html">Join Rooms</a>
 
                           
